# Anime-Hub

./: Anime.cpp  AnimeHub.cpp  AnimePreviewUI.cpp  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  styles.qrc
source/: AboutUI.cpp  AboutUI.h  AboutUI.ui  AniList.cpp  AniList.h  AniListImport.cpp  AniListImport.h  AniListImport.ui  AniListImportUI.cpp  AniListImportUI.h  AniListImportUI.ui  Anime.cpp  Anime.h  AnimeHub.cpp  AnimeHub.h  AnimeHub.ui  AnimePreviewUI.cpp  AnimePreviewUI.h  AnimePreviewUI.ui  Settings.cpp  Settings.h  SettingsUI.cpp  SettingsUI.h  SettingsUI.ui  main.cpp
styles/: vyn-dark.qss
